<resources>
    <string name="app_name">MiDespensApp</string>
    <string name="titulo_despensa">Despensa</string>
    <string name="titulo_lista">Lista de la Compra</string>
    <string name="titulo_notificaciones">Notificaciones</string>
    <string name="añadir">+</string>
    <string name="producto">producto</string>
    <string name="cantidad_en_stock">cantidad actual en stock</string>
    <string name="cantidadParaComprar">Cantidad a comprar</string>
    <string name="cantidadAlmacenada">cantidadAlmacenada</string>
    <string name="nombreProducto">nombre del producto</string>
    <string name="cantidadMinimaProducto">cantidad minima de stock</string>
    <string name="cantidadActualProducto">cantidad actual del producto</string>
    <string name="registar_prod_despensa">registar producto</string>
    <string name="instruccionesRegistroProducto">si la cantidad es menor que el stock minimo, se entendera que quiere añadir a la lista de la compra este nuevo producto</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_register">Registrarse</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe ser mayor de 5 cracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="anadir_a_lista_compra">Añadir a la lista de la compra</string>
    <string name="registrarse">registrarse</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="registrarseEnCasaExistente">registrar en casa existente</string>
    <string name="inserta_casa_id">Inserta el id de la casa</string>
    <string name="casa_id">id de la casa</string>
    <string name="stockminimo">Minimo</string>
    <string name="stock_actual">Actual</string>
    <string name="comprado">comprado</string>
    <string name="registar_prod_despensa_titulo">Registrar producto en despensa</string>
    <string name="anadir_a_despensa">Añadir a despensa</string>
    <string name="registar_prod_listaCompra_titulo">Registrar producto en lista de la compra</string>
    <string name="guardar_en_despensa">Guardar en Despensa</string>
    <string name="enviar_casa">Enviar codigo de la casa</string>
    <string name="borrar_despensa">Borrar la despensa</string>
    <string name="borrar_compra">Borrar la lista de la compra</string>
    <string name="informacion">Informacion</string>
    <string name="informacion_texto">MiDespensaApp es una aplicación para gestionar la despensa de tu hogar.\n
        \n● En la despensa podras ver el producto, entre parentesis la cantidad minima de stock que has establecido y la cantidad actual que tienes en stock, la cual podras aumentar o disminuir desde el boton + y - respectivamente.
        \n● Puedes añadir productos a la despensa y a la lista de la compra.
        \n● Compartir tu despensa con otros usuarios.
        \n● Desde el boton +, podras añadir tus productos a la despensa o a la lista, y tambien tendras la opcion de añadirlos a los dos sitios desde un unico registro.
        \n● Si quieres eliminar productos de alguna de tus listas podras marcarlos y pulsar la papelera.
        \n● Si quieres mandar productos desde la lista de la compra a la despensa, podras marcarlos y pulsar el boton a la izquierda de la papelera con el icono de una lista.
        \n● Si quieres editar el stock minimo de un producto de tu despensa, podras marcarlo y pulsar el boton a la izquierda de la papelera con el icono de un lapiz.
    </string>
    <string name="aceptar">Aceptar</string>
    <string name="el_usuario_no_est_autenticado">El usuario no está autenticado</string>
    <string name="error_obteniendo_casa">Error obteniendo casa: %1$s</string>
    <string name="error_borrando_lista_de_compra">Error borrando lista de compra: %1$s</string>
    <string name="lista_de_compra_borrada">Lista de compra borrada</string>
    <string name="error_borrando_despensa">Error borrando despensa: %1$s</string>
    <string name="despensa_borrada">Despensa borrada</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="anadir_para_comprar">Añadir para comprar</string>
    <string name="cantidad">Cantidad</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_eliminando_cuenta">Error al eliminar la cuenta</string>
    <string name="dialog_eliminar">¿Estás seguro de que quieres borrar tu cuenta en MiDespensApp?, tambien se borrarian todos los datos asociados a ella,incluida la casa en caso de ser el unico miembro.</string>
    <string name="titulo_dialog_eliminar">Borrar Cuenta</string>
</resources>