<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.midespensapp.ui.despensa.DespensaFragment"
        android:label="@string/titulo_despensa"
        tools:layout="@layout/fragment_despensa" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.midespensapp.ui.lista.ListaFragment"
        android:label="@string/titulo_lista"
        tools:layout="@layout/fragment_lista" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.midespensapp.ui.notificaciones.NotificacionesFragment"
        android:label="@string/titulo_notificaciones"
        tools:layout="@layout/fragment_notificaciones" />
</navigation>