<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.despensa.AnadirDespensaActivity"
    android:background="?attr/colorSecondaryVariant"
    >

    <EditText
        android:id="@+id/nombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreProducto"
        android:inputType="text"
        android:textColorHint="?attr/colorOnSecondary"
        android:allowClickWhenDisabled="true"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/cantidadMinimaStock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cantidadMinimaStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidadMinimaProducto"
        android:textColorHint="?attr/colorOnSecondary"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/cantidadActual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreProducto" />


    <EditText
        android:id="@+id/cantidadActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_en_stock"
        android:textColorHint="?attr/colorOnSecondary"
        android:inputType="number"
        android:maxLength="4"
        android:allowClickWhenDisabled="true"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cantidadMinimaStock" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anadir_a_lista_compra"
        android:id="@+id/checkBox"
        android:textColorHint="?attr/colorOnSecondary"
        android:allowClickWhenDisabled="true"
        app:layout_constraintTop_toBottomOf="@id/cantidadActual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cantidadAComprar"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cantidadAComprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidadParaComprar"
        android:inputType="number"
        android:maxLength="4"
        android:textColorHint="?attr/colorOnSecondary"
        android:visibility="gone"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/botonRegistrarEnDespensa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />



    <Button
        android:id="@+id/botonRegistrarEnDespensa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registar_prod_despensa"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cantidadAComprar" />

</androidx.constraintlayout.widget.ConstraintLayout>