<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorDeFondo"
    >


    <TextView
        android:id="@+id/nombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.95"
        android:layout_marginLeft="5dp"
        android:text="@string/producto"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textoStockMinimo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:enabled="false"
        android:text="@string/stockminimo"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textoStockActual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:text="@string/stock_actual"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="-"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="+"
        android:textSize="10sp" />



</LinearLayout>
