<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.despensa.DespensaFragment"
    android:background="?attr/colorSecondaryVariant"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockminimo"
            android:textSize="15sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_weight="1"
            android:layout_marginStart="200dp"
            android:id="@+id/textoStockMinimo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_actual"
            android:textSize="15sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_weight="1"
            android:id="@+id/textoStockActual"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewDespensa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/btn_add_producto"

        />

    <Button
        android:id="@+id/btn_add_producto"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/añadir"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_añadir_seleccionados_despensa"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:drawableRight="@drawable/lapiz"
        android:gravity="center"
        android:text=""
        android:layout_marginStart="20dp"
        app:cornerRadius="40dp"
        app:layout_constraintTop_toTopOf="@id/btn_add_producto"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_producto"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_borrar_seleccionados"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:drawableRight="@drawable/papelera"
        android:gravity="center"
        android:text=""
        android:paddingEnd="13dp"
        app:cornerRadius="40dp"
        app:layout_constraintTop_toTopOf="@id/btn_add_producto"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>